# research

./: .gitignore
paper_agriplanner/: case_1_costgraph.py  case_1_table.ipynb  case_2_costgraph.py  case_2_table.ipynb  case_3_costgraph.py  case_3_table.ipynb  e2d_concavehull.py  e2d_params_fig.py  e3d_params_fig.py  eur5e_fig.py  runner.py  task_map.py
paper_sequential_planner/: CMakeLists.txt  r6s_omplsnggoal.cpp  r6s_snggoal.yaml  tsp_solver_nnaprox.cpp  ur5e_col.cpp  ur5e_col.yaml  ur5e_planning.cpp  ur5e_planning.yaml
paper_sequential_planner/exp/: exp1.py  exp2_parse.py
paper_sequential_planner/experiments/: dev.py  dev6d.py  dev_better.py  dev_final.py  dev_memorysave.py  env_planar6r.py  env_planarrr.py  env_planarrr_ext.py  env_random.py  env_randomalpha.py  env_randomcircle.py  env_spatial3r.py  env_ur5e.py  env_ur5e_.py  env_ur5e_sphere.py  env_ur5e_threeshelf.py  graph2dtest.py  graphsearch.py  testPlanner.py  utilio.py
paper_sequential_planner/scripts/: aitstar_mytest.py  astar_ndgrid.py  astaring.py  bitstar.py  bitstar_mod.py  ce_ellipsiod_method.py  ce_informest.py  ce_pf_method.py  ce_softprm_method.py  ce_stompnoise.py  ce_vp.py  exp1.py  exp2.py  exp2_plot.py  exp3.py  fastroncpp.py  fastroncpp3d.py  geometric_Xmean.py  geometric_cluster.ipynb  geometric_cluster.py  geometric_clusteringex.py  geometric_cost_est.ipynb  geometric_cost_est.py  geometric_dev.py  geometric_ellipse.ipynb  geometric_ellipse.py  geometric_fastron.ipynb  geometric_fastron.py  geometric_fastron_og.py  geometric_fastron_vectorized.py  geometric_gmm.py  geometric_pcm.py  geometric_pose_cluster.py  geometric_poses.py  geometric_sort.py  geometric_svmest.py  geometric_svmtron.py  geometric_torus.py  geometric_voronoi.py  gtsp_ultra.py  (+28 more)
paper_sequential_planner/scripts/gcs/: graph_convexset.py  iris_normal.py
paper_sequential_planner/src/: ur5e_planning.cpp
paper_sequential_planner/test/: pino.cpp  ploter.py  rnd_gtsp.py  robotsp_tsp.py  robotsp_ur5e_main.py  testPlanner.py  ur5e_col.cpp  urdf_col.cpp  urdf_fromt.cpp  view_model.py  view_oxl.py
paper_torus/: CMakeLists.txt
paper_torus/config/: r2s_altgoal.yaml  r2s_snggoal.yaml  so2s_snggoal.yaml
paper_torus/paperfig/: data_aik.py  data_compute_planner.py  data_compute_scene.py  data_nik.py  plot_gtsp_forpaper.py  plot_r2s_forpaper.py  plot_so2s_forpaper.py  svg_optimization_guide.py
paper_torus/scripts/: exp2.py  plot_ur5e_bullet.py  rnd_tsp.py  robotsp_ultra_ur5e_main.py  robotsp_ur5e_main.py  ur5e_experiment.py  util.py
paper_torus/src/: r2s_cartgoal.cpp  r2s_prm.cpp  r2s_snggoal.cpp  r6s_altgoal.cpp  r6s_cartgoal.cpp  r6s_cartgoal_tsrrt.cpp  r6s_snggoal.cpp  so2s_snggoal.cpp
paper_torus/test/: pythontsp.py  test.py  test2.py
paper_torus_mini/: fig_cspace.py  fig_torus_planar_rr.py  fig_torus_ur5e.py  task_map.py
thesis_agriplanner/: case_1.ipynb  case_1_calculate_data.py  case_2.ipynb  case_2_calculate_data.py  case_3.ipynb  case_3_calculate_data.py  eur5e_fig.py  runner.py  sampling_measure.py  traj_smooth.py
thesis_agriplanner/pcd/: display.py  merge_harvest.py  merge_pcd.py
